--- a/project2.html
+++ b/project2.html
@@ -500,7 +500,7 @@ def convolve2d_with_2_loops(image, kernel):
                 <div class="result-caption">Original Blurry Image</div>
             </div>
             <div class="result-item">
-                <img src="taj.sharpened.jpg" alt="Sharpened image">
+                <img src="taj_sharpened.jpg" alt="Sharpened image">
                 <div class="result-caption">Sharpened Result</div>
             </div>
         </div>
