--- a/project2.html
+++ b/project2.html
@@ -633,7 +633,7 @@ def convolve2d_with_2_loops(image, kernel):
 
         <h3>Custom Blending Examples</h3>
 
-        <h4>Example 1: Flower + Fireworks (Circular Mask)</h4>
+        <h4>Example 1: Cat + Tiger (Circular Mask)</h4>
         <p>I created a custom blend using an irregular circular mask with ultra-smooth transitions to seamlessly integrate a flower center with fireworks background:</p>
 
         <div class="full-width-image">
@@ -649,6 +649,12 @@ def convolve2d_with_2_loops(image, kernel):
         <h4>Example 2: Additional Creative Blend</h4>
         <div class="full-width-image">
             <img src="Figure_1.png" alt="Additional creative blend">
+            <div class="result-caption">Additional Creative Blend: Custom mask design</div>
+        </div>
+
+        <h4>Example 3: Additional Creative Blend</h4>
+        <div class="full-width-image">
+            <img src="Figure_26.png" alt="Additional creative blend">
             <div class="result-caption">Additional Creative Blend: Custom mask design</div>
         </div>
 
